--- a/vrotation/static/css/main.css
+++ b/vrotation/static/css/main.css
@@ -442,8 +442,9 @@ nav a:hover {
 }
 
 #lp1 {
-	top:335px;
-	left:25px;
+	top:333px;
+	left:23px;
+	border:2px dotted white;
 }
 
 #lp2 {
@@ -487,8 +488,9 @@ nav a:hover {
 }
 
 #rp4 {
-	top:15px;
-	left:330px;
+	top:16px;
+	left:329px;
+	border:2px dotted white;
 }
 
 #rp5 {
